@@ -7,9 +7,9 @@ solution: Experience Manager, Experience Manager Sites
 feature: Deploying
 role: Admin
 exl-id: 93dc74b3-dfe3-442f-9dec-1b7af41cd4a1
-source-git-commit: d353cde4e9cc2af738e600d5a9b74928d98496cb
+source-git-commit: 90e63ad3be32b7ce551c5e3579c722ef75d97f95
 workflow-type: tm+mt
-source-wordcount: '0'
+source-wordcount: '1564'
 ht-degree: 0%
 
 ---
@@ -48,10 +48,16 @@ Hay varias reglas que se deben seguir al cambiar el nombre del archivo jar de in
 
 Si está ejecutando Oracle Java 17 o Java 21, se deben agregar modificadores adicionales a la línea de comandos al iniciar AEM.
 
-A continuación se muestra un ejemplo del aspecto que deberían tener los parámetros de JVM adicionales al iniciar AEM en Java 17/Java 21:
+* A continuación se muestra un ejemplo del aspecto que deberían tener los parámetros de JVM adicionales al iniciar AEM en Java 17/Java 21:
 
 ```shell
 -XX:+UseG1GC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=org.apache.sling.commons.threads -Djdk.util.zip.disableZip64ExtraFieldValidation=true
+```
+
+* [Solo Forms] A continuación se muestra un ejemplo para asegurar que AEM Forms funciona correctamente con Java 17/Java21, e incluye los siguientes parámetros JVM adicionales:
+
+```shell
+--add-opens=java.base/java.util=ALL-UNNAMED -add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED
 ```
 
 ## Ejecutar modos {#run-modes}
